--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_API_KEY =standard_51df6c2e473b2996e8c6b360fefce3589c12ad95fbda8e38f0
 NEXT_PUBLIC_PROJECT_ID = 671bb538002fe06554de
 NEXT_PUBLIC_DATABASE_ID = 671bb5790023d37a172a
 NEXT_PUBLIC_COLLECTION_ORDERS = 671bb57f00019aaa669d
+NEXT_PUBLIC_COLLECTION_SERVICES = 12354325235
