--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0", 
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "node-appwrite": "^14.1.0",
@@ -33,5 +33,10 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "overrides": {
+    "react-day-picker": {
+      "date-fns": "^3.6.0"
+    }
   }
 }
